WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63520
[X11][WK2] X error with plugin tests
https://bugs.webkit.org/show_bug.cgi?id=63520
Summary
[X11][WK2] X error with plugin tests
Balazs Kelemen
Reported
2011-06-28 01:59:21 PDT
plugins/destroy-stream-twice.html and plugins/npruntime/npruntime.html take out the following error: The program '<unknown>' received an X Window System error. This probably reflects a bug in the program. The error was 'BadValue (integer parameter out of range for operation)'. (Details: serial 208 error_code 2 request_code 53 minor_code 0) (Note to programmers: normally, X errors are reported asynchronously; that is, you will receive the error a while after causing it. To debug your program, run it with the --sync command line option to change this behavior. You can then get a meaningful backtrace from your debugger if you break on the gdk_x_error() function.) Both of them has an embed tag with width:0 and height:0 attributes. It came out that the X server does not accept a pixmap with (0,0) dimensions so we need to handle this as a special case.
Attachments
Patch
(3.21 KB, patch)
2011-06-28 02:21 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2011-06-28 02:07:23 PDT
plugins/object-embed-plugin-scripting.html is also affected.
Balazs Kelemen
Comment 2
2011-06-28 02:21:19 PDT
Created
attachment 98886
[details]
Patch
Kenneth Rohde Christiansen
Comment 3
2011-06-28 04:00:38 PDT
Comment on
attachment 98886
[details]
Patch Nice!
WebKit Review Bot
Comment 4
2011-06-28 04:42:46 PDT
Comment on
attachment 98886
[details]
Patch Clearing flags on attachment: 98886 Committed
r89921
: <
http://trac.webkit.org/changeset/89921
>
WebKit Review Bot
Comment 5
2011-06-28 04:42:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug