2011-06-28  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [X11][WK2] X error with plugin tests
        https://bugs.webkit.org/show_bug.cgi?id=63520

        * platform/qt-wk2/Skipped:
2011-06-28  Balazs Kelemen  <kbalazs@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [X11][WK2] X error with plugin tests
        https://bugs.webkit.org/show_bug.cgi?id=63520

        * WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
        Never create a pixmap with (0,0) dimensions.
        (WebKit::NetscapePlugin::platformGeometryDidChange):
        (WebKit::NetscapePlugin::platformPaint):

Canonical link: https://commits.webkit.org/79207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89921 268f45cc-cd09-0410-ab3c-d52691b4dbfc